# FEMCoursePZ

./: CMakeLists.txt  Journal.md  README.md
headers/: Analysis.h  Assemble.h  CMakeLists.txt  CompElement.h  CompElementTemplate.h  CompMesh.h  DOF.h  DataTypes.h  GeoElement.h  GeoElementSide.h  GeoElementTemplate.h  GeoMesh.h  GeoNode.h  Geom1d.h  GeomQuad.h  GeomTetrahedron.h  GeomTriangle.h  IntPointData.h  IntRule.h  IntRule1d.h  IntRuleQuad.h  IntRuleTetrahedron.h  IntRuleTriangle.h  L2Projection.h  MathStatement.h  Poisson.h  PostProcess.h  PostProcessTemplate.h  ReadGmsh.h  Shape1d.h  ShapeQuad.h  ShapeTetrahedron.h  ShapeTriangle.h  TMatrix.h  Topology1d.h  TopologyQuad.h  TopologyTetrahedron.h  TopologyTriangle.h  VTKGeoMesh.h  tpanic.h
mainprograms/: CMakeLists.txt  main.cpp
src/: Analysis.cpp  Assemble.cpp  CMakeLists.txt  CompElement.cpp  CompElementTemplate.cpp  CompMesh.cpp  DOF.cpp  GeoElement.cpp  GeoElementSide.cpp  GeoElementTemplate.cpp  GeoMesh.cpp  GeoNode.cpp  Geom1d.cpp  GeomQuad.cpp  GeomTetrahedron.cpp  GeomTriangle.cpp  IntRule.cpp  IntRule1d.cpp  IntRuleQuad.cpp  IntRuleTetrahedron.cpp  IntRuleTriangle.cpp  L2Projection.cpp  MathStatement.cpp  Poisson.cpp  Shape1d.cpp  ShapeQuad.cpp  ShapeTetrahedron.cpp  ShapeTriangle.cpp  TMatrix.cpp  TVec.cpp  Topology1d.cpp  TopologyQuad.cpp  TopologyTetrahedron.cpp  TopologyTriangle.cpp  VTKGeoMesh.cpp
tinyxml/: CMakeLists.txt
